RESOLVED FIXED152853
FTL B3 lazy slow paths should do exceptions
https://bugs.webkit.org/show_bug.cgi?id=152853
Summary FTL B3 lazy slow paths should do exceptions
Filip Pizlo
Reported 2016-01-07 13:31:26 PST
Patch forthcoming.
Attachments
work in progress (3.42 KB, patch)
2016-01-07 16:43 PST, Filip Pizlo
no flags
the patch (4.22 KB, patch)
2016-01-07 17:14 PST, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2016-01-07 16:43:22 PST
Created attachment 268506 [details] work in progress
Filip Pizlo
Comment 2 2016-01-07 17:14:25 PST
Created attachment 268514 [details] the patch
Saam Barati
Comment 3 2016-01-07 17:27:04 PST
Comment on attachment 268514 [details] the patch r=me
Filip Pizlo
Comment 4 2016-01-07 17:53:16 PST
Note You need to log in before you can comment on or make changes to this bug.