FTL B3 lazy slow paths should do exceptions https://bugs.webkit.org/show_bug.cgi?id=152853

Reviewed by Saam Barati.

This reduces the number of JSC test failures to 97.

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::DFG::LowerDFGToLLVM::lazySlowPath):
* tests/stress/ftl-new-negative-array-size.js: Added.
(foo):



Canonical link: https://commits.webkit.org/170964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194748 268f45cc-cd09-0410-ab3c-d52691b4dbfc